@startuml

title __AIRSHIP's Class Diagram__\n

  namespace  {
    namespace irship {
      abstract class Airship.Airship {
          # name : String
          # numberQuarter : int
          # positionQuarter : int[][]
          # quarterList : Quarter[][]
          {static} ~ numberOfShip : int
          + Airship()
          + getName()
          + getNumberQuarter()
          + getQuarterList()
      }
    }
  }
  

  namespace  {
    namespace irship {
      class Airship.ManOWar {
          ~ maxColumn : int
          ~ maxRow : int
          ~ positionQuarter : int[][]
          + ManOWar()
          + getImage()
          + getPositionQuarter()
      }
    }
  }
  

  Airship.ManOWar -up-|> Airship.Airship
  Airship.ManOWar o-- General.AnimatedThing : image


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
